--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 <body>
 
   <header>
-
-    <h2>Rock Gardens</h2>
-
-    <h1>枯山水</h1>
+    <h1>Rock Gardens</h1>
+    <h2>枯山水</h2>
 
     <nav>
       <ul>
@@ -22,7 +20,6 @@
         <li><a href="#"></a>Symbolism</li>
       </ul>
     </nav>
-
   </header>
 
   <main>
@@ -30,24 +27,33 @@
     <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
 
     <ul>
-    閲覧
-    Viewing
-    A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo
-    Learn more about Viewing
 
-    砂利
-    Gravel
-    Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves
-    Learn more about Gravel
+      <li>
+        <h2>閲覧</h2>
+        <h3>Viewing</h3>
+        <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
+        <a href="#">Learn more about Viewing</a>
+      </li>
 
-    象徴主義
-    Symbolism
-    In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp
-    Learn more about Symbolism
+      <li>
+        <h2>砂利</h2>
+        <h3>Gravel</h3>
+        <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
+        <a href="#">Learn more about Gravel</a>
+      </li>
+
+      <li>
+        <h2>象徴主義</h2>
+        <h3>Symbolism</h3>
+        <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
+        <a href="#">Learn more about Symbolism</a>
+      </li>
     </ul>
   </main>
+
   <footer>
-    © 794 Heian Period
+    <p>© 794 Heian Period</p>
   </footer>
+
 </body>
 </html>
