Assign roles to html

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 
-  <header>
+  <header role="banner">
     <h1>Rock Gardens</h1>
     <h2>枯山水</h2>
 
-    <nav>
+    <nav role="navigation">
       <ul>
         <li><a href="#"></a>Viewing</li>
         <li><a href="#"></a>Gravel</li>
@@ -22,7 +22,7 @@
     </nav>
   </header>
 
-  <main>
+  <main role="main">
     <p>自然の親密な本質を模倣し、人生の真の意味を発見する。</p>
     <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
 
@@ -51,7 +51,7 @@
     </ul>
   </main>
 
-  <footer>
+  <footer role="contentinfo">
     <p>© 794 Heian Period</p>
   </footer>
 
