--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <header role="banner">
     <h1>Rock Gardens</h1>
-    <h2>枯山水</h2>
+    <h2><i lang="ja">枯山水</i></h2>
 
     <nav role="navigation">
       <ul>
@@ -20,35 +20,40 @@
         <li><a href="#"></a>Symbolism</li>
       </ul>
     </nav>
+    <img src="images/banner.svg" alt="Landscape banner.">
   </header>
 
   <main role="main">
-    <p>自然の親密な本質を模倣し、人生の真の意味を発見する。</p>
+    <p><i lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i></p>
     <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
 
-    <ul>
+    <section>
 
-      <li>
-        <h2>閲覧</h2>
+      <article>
+        <img src="images/viewing.svg" alt="">
+        <h2><i lang="ja">閲覧</i></h2>
         <h3>Viewing</h3>
         <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
         <a href="#">Learn more about Viewing</a>
-      </li>
+      </article>
 
-      <li>
-        <h2>砂利</h2>
+      <article>
+        <img src="images/gravel.svg" alt="">
+        <h2><i lang="ja">砂利</i></h2>
         <h3>Gravel</h3>
         <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
         <a href="#">Learn more about Gravel</a>
-      </li>
+      </article>
 
-      <li>
-        <h2>象徴主義</h2>
+      <article>
+        <img src="images/symbolism.svg" alt="">
+        <h2><i lang="ja">象徴主義</i></h2>
         <h3>Symbolism</h3>
         <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
         <a href="#">Learn more about Symbolism</a>
-      </li>
-    </ul>
+      </article>
+
+    </section>
   </main>
 
   <footer role="contentinfo">
