Add alt content to images

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section>
 
       <article>
-        <img src="images/viewing.svg" alt="">
+        <img src="images/viewing.svg" alt="Image of zen garden.">
         <h2><i lang="ja">閲覧</i></h2>
         <h3>Viewing</h3>
         <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
@@ -38,7 +38,7 @@
       </article>
 
       <article>
-        <img src="images/gravel.svg" alt="">
+        <img src="images/gravel.svg" alt="Image of rock in zen garden.">
         <h2><i lang="ja">砂利</i></h2>
         <h3>Gravel</h3>
         <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
@@ -46,7 +46,7 @@
       </article>
 
       <article>
-        <img src="images/symbolism.svg" alt="">
+        <img src="images/symbolism.svg" alt="Image of rock and tree in zen garden.">
         <h2><i lang="ja">象徴主義</i></h2>
         <h3>Symbolism</h3>
         <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
