Update header css

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
 
   <header role="banner">
-    <h1>Rock Gardens</h1>
-    <h2><i lang="ja">枯山水</i></h2>
+    <h1><i lang="ja">枯山水</i></h1>
+    <h2>Rock Gardens</h2>
 
     <nav role="navigation">
       <ul>
-        <li><a href="#"></a>Viewing</li>
-        <li><a href="#"></a>Gravel</li>
-        <li><a href="#"></a>Symbolism</li>
+        <li><a href="#">Viewing</a></li>
+        <li><a href="#">Gravel</a></li>
+        <li><a href="#">Symbolism</a></li>
       </ul>
     </nav>
     <img src="images/banner.svg" alt="Landscape banner.">
