Fix validation errors

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
   </header>
 
   <main role="main">
-    <p><i lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i></p>
-    <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
+    <div class="intro">
+      <i lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i>
+      <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
+    </div>
 
     <section>
 
