Add margin and padding

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <header role="banner">
     <h1><i lang="ja">枯山水</i></h1>
-    <h2>Rock Gardens</h2>
+    <span>Rock Gardens</span>
 
     <nav role="navigation">
       <ul>
@@ -33,24 +33,24 @@
 
       <article>
         <img src="images/viewing.svg" alt="Image of zen garden.">
-        <h2><i lang="ja">閲覧</i></h2>
-        <h3>Viewing</h3>
+        <i lang="ja">閲覧</i>
+        <h2>Viewing</h2>
         <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
         <a href="#">Learn more about Viewing</a>
       </article>
 
       <article>
         <img src="images/gravel.svg" alt="Image of rock in zen garden.">
-        <h2><i lang="ja">砂利</i></h2>
-        <h3>Gravel</h3>
+        <i lang="ja">砂利</i>
+        <h2>Gravel</h2>
         <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
         <a href="#">Learn more about Gravel</a>
       </article>
 
       <article>
         <img src="images/symbolism.svg" alt="Image of rock and tree in zen garden.">
-        <h2><i lang="ja">象徴主義</i></h2>
-        <h3>Symbolism</h3>
+        <i lang="ja">象徴主義</i>
+        <h2>Symbolism</h2>
         <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
         <a href="#">Learn more about Symbolism</a>
       </article>
