Update header in media query

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
 
   <header role="banner">
-    <h1><i lang="ja">枯山水</i></h1>
-    <span>Rock Gardens</span>
+    <h1>
+      <i lang="ja">枯山水</i>
+      <span>Rock Gardens</span>
+    </h1>
 
     <nav role="navigation">
       <ul>
